fixed layout issues

--- a/src/components/MainMap/mainmap.module.css
+++ b/src/components/MainMap/mainmap.module.css
@@ -48,7 +48,8 @@
 	flex-grow: 1;
 	width: 100%;
 	min-width: min-content;
-	min-height: 100%;
+	min-height: 60vh;
+	max-height: 100%;
 	position: relative;
 	grid-area: sidebar;
 	background: hsla(0, 0%, 0%, 0.4);
@@ -59,6 +60,7 @@
 	display: flex;
 	flex-direction: column;
 	width: 100%;
+	max-height: 90vh;
 	overflow-y: auto;
 }
 
