--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1,7 +1,6 @@
 .main-grid {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(0, 1fr));
-    grid-auto-rows: 1fr;
     grid-template-areas: 
     "header header header"
     "main   main   main"
@@ -11,28 +10,38 @@
 /* HEADER */
 .main-header {
     grid-area: header;
-    grid-row: 1 / 3;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    max-height: min-content;
 }
 
 .main-header a {
     color: var(--main-text);
 }
 
+.main-header a:hover {
+    color: var(--main-text);
+}
+
 .site-identity {
+    display: flex;
+    flex-direction: column;
     justify-self: center;
+    align-items: center;
     text-align: center;
     padding: 0 2%;
+    min-width: max-content;
 }
 
 .site-title {
-    font-size: 2em;
+    font-size: 2rem;
 }
 
 .site-description {
-    font-size: 1.5em;
+    font-size: 1rem;
+    width: max-content;
+    width: 100%;
 }
 
 /* Nav */
@@ -64,15 +73,14 @@
 
 .main-container {
     grid-area: main;
-    grid-row: 3 / 11;
-    min-height: 80vh;
+    height: 100%;
 }
 
 /* FOOTER */
 .main-footer {
     grid-area: footer;
-    grid-row: 11 / 13;
     display: flex;
+    max-height: min-content;
     justify-content: center;
     background: linear-gradient(180deg, hsla(29, 100%, 50%, 0.1), hsla(350, 96%, 20%, 0.5));
 }
