--- a/src/pages/styles/index.css
+++ b/src/pages/styles/index.css
@@ -3,7 +3,6 @@
 html {
     font-family: 'Recursive', sans-serif, 'Courier New', Courier, monospace;
     font-size: calc(10px + (32-10) * ((100vw - 280px) / 2000-280));
-    height: 100%;
 }
 
 body {
@@ -41,13 +40,14 @@ a:hover {
     display: flex;
     flex-wrap: wrap;
     width: 100%;
-    height: 100%;
+    max-height: min-content;
 }
 
 /* Map */
 .map-section {
     width: 100%;
-    max-height: 40vh;
+    min-height: 50vh;
+    max-height: 80vh;
 }
 
 /* Leaflet map */
